trying to add Semigroup

--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   "dependencies": {
     "chai": "^4.2.0",
     "fantasy-land": "^4.0.1",
+    "fantasy-laws": "^1.2.0",
     "jsverify": "^0.8.4",
+    "lodash": "^4.17.11",
     "mocha": "^6.1.4",
-    "sanctuary-show": "^1.0.0"
+    "sanctuary-show": "^1.0.0",
+    "sanctuary-type-classes": "^11.0.0"
   }
 }
