--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "fantasy-combinators": "0.0.1",
     "fantasy-land": "^4.0.1",
     "fantasy-laws": "^1.2.0",
+    "folktale": "^2.3.2",
     "jsverify": "^0.8.4",
     "lodash": "^4.17.11",
     "mocha": "^6.1.4",
