--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
   "dependencies": {
     "chai": "^4.2.0",
     "daggy": "^1.4.0",
+    "data.task": "^3.1.2",
     "fantasy-check": "^0.3.2",
     "fantasy-combinators": "0.0.1",
     "fantasy-land": "^4.0.1",
     "fantasy-laws": "^1.2.0",
-    "folktale": "^2.3.2",
     "jsverify": "^0.8.4",
     "lodash": "^4.17.11",
     "mocha": "^6.1.4",
@@ -31,5 +31,8 @@
     "sanctuary-show": "^1.0.0",
     "sanctuary-type-classes": "^11.0.0",
     "tagged": "^0.1.0"
+  },
+  "devDependencies": {
+    "folktale": "^2.3.2"
   }
 }
